# Skillbox-homeworks

./: .gitignore
Homework1/Task1/: main.cpp
Homework1/Task2/: main.cpp
Homework1/Task3/: main.cpp
Homework1/Task4/: main.cpp
Homework10/Task1/: main.cpp
Homework10/Task2/: main.cpp
Homework10/Task3/: main.cpp
Homework11/Task1/: main.cpp
Homework11/Task2/: main.cpp
Homework11/Task3/: main.cpp
Homework11/Task4/: main.cpp
Homework11/Task5/: main.cpp
Homework11/Task6/: main.cpp
Homework11/Task7/: Main.cpp
Homework11/Task8/: main.cpp
Homework12/Task1/: main.cpp
Homework12/Task2/: main.cpp
Homework12/Task3/: main.cpp
Homework12/Task4/: main.cpp
Homework12/Task5/: main.cpp
Homework13/Task1/: main.cpp
Homework13/Task2/: main.cpp
Homework13/Task3/: main.cpp
Homework14/Task1/: main.cpp
Homework14/Task2/: main.cpp
Homework14/Task3/: main.cpp
Homework15/Task1/: main.cpp  words.txt
Homework15/Task2/: main.cpp  text.txt
Homework15/Task3/: main.cpp
Homework15/Task4/: main.cpp
Homework15/Task5/: main.cpp
Homework16/Task1/: main.cpp  statement.txt
Homework16/Task2/: main.cpp  pic.txt
Homework16/Task3/: main.cpp  river.txt
Homework16/Task4/: main.cpp
Homework17/Task1/: main.cpp  statement.txt
Homework17/Task2/: main.cpp
Homework17/Task3/: main.cpp
Homework17/Task4/: main.cpp
Homework18/Task1/: main.cpp
Homework18/Task2/: main.cpp
Homework20/Task2/: CMakeLists.txt
Homework20/Task2/include/: cpu.h  kbd.h  ram.h
Homework20/Task2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
(+64 files in other folders)
